--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,6 +19,19 @@
             <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Help</button>
         </div>
     </nav>
+    <!-- <header>
+        <div class="d-flex flex-column flex-md-row align-items-center p-5 px-md-4 mb-3 bg-white border-bottom box-shadow">
+            <h5 class="my-0 mr-md-auto font-weight-normal">Maize deases Detection</h5>
+            <nav class="my-2 my-md-0 mr-md-3">
+              <a class="p-3 text-dark" href="#">Home</a>
+              <a class="p-3 text-dark" href="#">About</a>
+              <a class="p- text-dark" href="#">Picture</a>
+              <a class="p- text-dark" href="#">Stream</a>
+              <a class="p-3 text-dark" href="#">Support</a>
+            </nav>
+            <a class="btn btn-outline-primary" href="#">Sign up</a>
+          </div>
+    </header> -->
     <div class="container">
         <div id="content" style="margin-top:2em">{% block content %}{% endblock %}</div>
     </div>
