--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,32 +1,60 @@
-{% extends "base.html" %} {% block content %}
+<!-- <a href="{{ url_for('logout') }}">Log Out</a> -->
 
-<h2>Image Classifier</h2>
+<style>
+    body {
+  /* background-color: #00993b; */
+  background-image: url('../static/bg3.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 
-<div>
-    <form id="upload-file" method="post" enctype="multipart/form-data">
-        <label for="imageUpload" class="upload-label">
-            Choose...
-        </label>
-        <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg">
-    </form>
+  align-items: center;
+  justify-content: center;
+}
 
-    <div class="image-section" style="display:none;">
-        <div class="img-preview">
-            <div id="imagePreview">
-            </div>
+</style>
+<link href="https://cdn.bootcss.com/bootstrap/5.0.0/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="../static/css/main.css">
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+<div class="">
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">AI Demo</a>
+    
+            
+            <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit"><a href="{{ url_for('logout') }}" class="text-white">Log Out</a></button>
         </div>
+    </nav>
+    <div class="container align-item mt-5">
+        <h2 class="mt-2 text-white" style="color: #FFFFFF;">Maize Leaf diseases Classifier</h2>
+    
         <div>
-            <button type="button" class="btn btn-primary btn-lg " id="btn-predict">Predict!</button>
+            <form id="upload-file" method="post" enctype="multipart/form-data">
+                <label for="imageUpload" class="upload-label">
+                    Choose...
+                </label>
+                <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg">
+            </form>
+        
+            <div class="image-section" style="display:none;">
+                <div class="img-preview">
+                    <div id="imagePreview">
+                    </div>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-success btn-lg " id="btn-predict">Predict!</button>
+                </div>
+            </div>
+        
+            <div class="loader" style="display:none;"></div>
+        
+            <h3 id="result" style="color: #FFFFFF;">
+                <span> </span>
+            </h3>
+        
         </div>
     </div>
-
-    <div class="loader" style="display:none;"></div>
-
-    <h3 id="result">
-        <!-- <span> </span> {{Prediction}} -->
-        <span> </span>
-    </h3>
-
 </div>
+<script src="../static/js/main.js"></script>
 
-{% endblock %}
